# ieh-client

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: client_usage.md  generate_building_profile.md  generate_charging_point_profile.md  generate_truck_profile.md  installation.md
examples/: example1.py  example2.py  example3.py  example4.py  example_building_profile.py  example_charging_point_profile.py  example_truck_profile.py
src/ieh_client/: __init__.py
src/ieh_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ieh_client/_testing/: __init__.py  test_profile_api_client_core.py  test_validation.py
src/ieh_client/client/: client.py
src/ieh_client/validation/: validation.py
tests/: test_profile_api_client_unittest.py
