[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ieh-client"
authors = [
    { name = "Johannes Beck", email = "johannes.beck@ieh.uni-stuttgart.de" },
]
version = "1.0.0"
description = "API client for the remote simulation of prosumer profiles using the ieh prosumer profile generators on a simulation server"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "python", "timeseries", "simulation", "profile", "prosumer", "power", "energy", "markov", "monte-carlo"
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas~=2.2.2",
    "numpy~=1.26.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.tik.uni-stuttgart.de/ieh-lib/ieh-client"