[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieh-client"
authors = [
    { name = "Johannes Beck", email = "johannes.beck@ieh.uni-stuttgart.de" },
]
version = "1.0.0"
description = "API client for the remote simulation of prosumer profiles using the ieh prosumer profile generators on a simulation server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.19",
    "pandas>=2.2,<3",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "urllib3>=2.2",
]
keywords = [
    "python", "timeseries", "simulation", "profile", "prosumer", "power", "energy", "markov", "monte-carlo"
]
license = "MIT"

[project.optional-dependencies]
holidays = [
    "holidays>=0.56",
]
plot = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/ieh-client-admin/ieh-client"
